Add program parameters RunOnStart and Concurrency, ExplicitTLS for FTP Server config

--- a/internal/config/fixtures/config.test.yml
+++ b/internal/config/fixtures/config.test.yml
@@ -11,6 +11,7 @@ server:
     disableEPSV: false
     disableMLSD: false
     tls: false
+    explicittls: false
     insecureSkipVerify: false
     logTrace: false
 
