--- a/internal/config/fixtures/config.ftp.yml
+++ b/internal/config/fixtures/config.ftp.yml
@@ -14,6 +14,7 @@ server:
     disableEPSV: false
     disableMLSD: false
     tls: false
+    explicittls: false
     insecureSkipVerify: false
     logTrace: false
 
